# filmtherapy_chat_bot

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  INFRA.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  sitecustomize.py
.github/workflows/: cloud-run-deploy.yml
infra/terraform/: main.tf  outputs.tf  providers.tf  variables.tf
src/: config.py  container.py  exceptions.py  keyboards.py  main.py  profiling.py
src/bot/: __init__.py  booking_flow.py  callbacks.py  dependencies.py  utils.py  webapp.py
src/bot/routers/: admin.py  booking.py  cinema.py  quiz.py  start.py
src/bot/web/: about.py  admin.py  bookings.py  common.py  events.py  i18n.py  locations.py  quiz.py  schedule.py  tg.py  utils.py
src/data/: quiz.json  style.css
src/i18n/: texts.py
src/services/: calendar_service.py  db.py  event_service.py  firestore_client.py  metrics_service.py  models.py  repositories.py  storage.py
src/templates/: about.html  base.html  bookings.html  calendar.html  events.html  events_add.html  events_edit.html  i18n.html  index.html  locations.html  locations_by_type.html  metrics.html  quiz.html  raw.html  schedule.html  system.html
tests/: conftest.py  test_calendar_service.py  test_event_service.py  test_schedule_repository.py
