[project]
name = "gantich-chat-bot-tg"
version = "0.1.0"
description = "Modernized Telegram Bot with FastAPI Admin UI and Firestore"
dependencies = [
    "aiogram>=3.25.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "orjson>=3.11.7",
    "fastapi>=0.133.1",
    "uvicorn>=0.41.0",
    "Jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "dependency-injector>=4.48.3",
    "google-cloud-firestore>=2.23.0",
    "grpcio>=1.78.0",
]
requires-python = ">=3.14"

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ASYNC"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
